--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-08 21:00+0000\n"
+"POT-Creation-Date: 2021-04-09 19:27+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Moy Moussan <moymoussan@gmail.com>, 2021\n"
 "Language-Team: Spanish (https://www.transifex.com/rapidpro/teams/226/es/)\n"
@@ -3089,6 +3089,26 @@ msgstr "Actualizar carpeta"
 msgid "Update Label"
 msgstr "Actualizar etiqueta"
 
+msgid "Agent Name"
+msgstr "Nombre del agente"
+
+#, fuzzy
+#| msgid "Your last name"
+msgid "Your Chatbase agent's name."
+msgstr "Su apellido"
+
+msgid "The chatbase agent's API Key."
+msgstr ""
+
+msgid "Version"
+msgstr "Versión"
+
+msgid "Missing agent name or API key."
+msgstr ""
+
+msgid "Your DT One API key and secret seem invalid. Please check them again and retry."
+msgstr "Su clave y API Secret de DT One parecen no válidos. Revíselos de nuevo y vuelva a intentarlo."
+
 msgid "Administrators"
 msgstr "Administradores"
 
@@ -3623,15 +3643,6 @@ msgstr "Guardar"
 msgid "New Event"
 msgstr "Nuevo evento"
 
-msgid "Agent Name"
-msgstr "Nombre del agente"
-
-msgid "Version"
-msgstr "Versión"
-
-msgid "Missing data: Agent Name or API Key.Please check them again and retry."
-msgstr "Datos faltantes: nombre del agente o clave de API. Vuelva a verificarlos y vuelva a intentarlo."
-
 msgid "Your Account"
 msgstr "Su cuenta"
 
@@ -3649,9 +3660,6 @@ msgstr "Ayuda"
 
 msgid "Sign Out"
 msgstr "Desconectar"
-
-msgid "Your DT One API key and secret seem invalid. Please check them again and retry."
-msgstr "Su clave y API Secret de DT One parecen no válidos. Revíselos de nuevo y vuelva a intentarlo."
 
 msgid "Account Token"
 msgstr "Token de cuenta"
@@ -6623,6 +6631,67 @@ msgstr ""
 "Tarjeta de crédito: %(cc_type)s X%(cc_last4)s\n"
 "\n"
 
+#, fuzzy, python-format
+#| msgid "A connection to a Twilio account is required"
+msgid "Connected to your Chatbase account as agent <b>%(agent)s</b>."
+msgstr "Se requiere una conexión a una cuenta Twilio"
+
+msgid "Connect your Chatbase account."
+msgstr ""
+
+msgid "Connecting your Chatbase account will allow you to monitor your bot, fix broken experiences and better understand your users. To signup for an account, visit"
+msgstr "Conectar su cuenta de Chatbase le permitirá monitorear su bot, arreglar experiencias rotas y comprender mejor a sus usuarios. Para registrarse para obtener una cuenta, visite"
+
+msgid "Your Chatbase account is connected to the Agent"
+msgstr "Su cuenta de Chatbase está conectada al Agente"
+
+msgid "If you no longer want it connected, you can"
+msgstr "Si ya no lo quiere conectado, puede"
+
+msgid "disconnect"
+msgstr "desconectar"
+
+msgid "your Chatbase account. Doing so will interrupt the data sent to your Chatbase console."
+msgstr "su cuenta de Chatbase. Hacerlo interrumpirá los datos enviados a su consola de Chatbase."
+
+msgid "Disconnect Chatbase"
+msgstr "Desconectar Chatbase"
+
+msgid "This will disconnect your Chatbase account. Are you sure you want to proceed?"
+msgstr "Esto desconectará su cuenta de Chatbase. ¿Estas seguro que deseas continuar?"
+
+#, fuzzy
+#| msgid "Connected to Chatbase Account"
+msgid "Connected to your DT One account."
+msgstr "Conectado a la cuenta de Chatbase"
+
+msgid "Transfer Log"
+msgstr "Registro de transferencia"
+
+msgid "Connect your DT One account."
+msgstr ""
+
+#, python-format
+msgid "Adding a DT One account will allow you to send airtime credit over 400+ operators in over 100 countries. Once connected you can transfer airtime credit within your flows. To signup for an account, visit %(link)s."
+msgstr ""
+
+#, python-format
+msgid "You can find your credentials on the Developer tab on your %(link)s page."
+msgstr ""
+
+msgid "Your account is connected to a DT One account."
+msgstr ""
+
+#, python-format
+msgid "If you no longer want it connected, you can <a href=\"%(disconnect_url)s\">disconnect</a> it. Doing so will cause the payment actions in your flows to no longer be processed."
+msgstr ""
+
+msgid "Disconnect DT One"
+msgstr "Desconecte DT One"
+
+msgid "This will disconnect your DT One account. Payment actions will no longer be processed. Are you sure you want to proceed?"
+msgstr "Esto desconectará su cuenta de DT One. Las acciones de pago ya no se procesarán. ¿Estas seguro que deseas continuar?"
+
 msgid "Confirm Access"
 msgstr "Confirmar acceso"
 
@@ -6672,33 +6741,6 @@ msgstr "Si utiliza la aplicación %(brand)s Surveyor para ejecutar flujos sin co
 msgid "Your workspace has"
 msgstr "Tu espacio de trabajo tiene"
 
-msgid "Connected to Chatbase Account"
-msgstr "Conectado a la cuenta de Chatbase"
-
-msgid "Connect your Chatbase account."
-msgstr ""
-
-msgid "Connecting your Chatbase account will allow you to monitor your bot, fix broken experiences and better understand your users. To signup for an account, visit"
-msgstr "Conectar su cuenta de Chatbase le permitirá monitorear su bot, arreglar experiencias rotas y comprender mejor a sus usuarios. Para registrarse para obtener una cuenta, visite"
-
-msgid "Your Chatbase account is connected to the Agent"
-msgstr "Su cuenta de Chatbase está conectada al Agente"
-
-msgid "If you no longer want it connected, you can"
-msgstr "Si ya no lo quiere conectado, puede"
-
-msgid "disconnect"
-msgstr "desconectar"
-
-msgid "your Chatbase account. Doing so will interrupt the data sent to your Chatbase console."
-msgstr "su cuenta de Chatbase. Hacerlo interrumpirá los datos enviados a su consola de Chatbase."
-
-msgid "Disconnect Chatbase"
-msgstr "Desconectar Chatbase"
-
-msgid "This will disconnect your Chatbase account. Are you sure you want to proceed?"
-msgstr "Esto desconectará su cuenta de Chatbase. ¿Estas seguro que deseas continuar?"
-
 msgid "Choose Workspace"
 msgstr "Elija el Workspace"
 
@@ -6735,36 +6777,6 @@ msgstr "Estás a punto de borrar"
 
 msgid "Are you sure you want to delete everything for this org? This cannot be undone. Any logins which only belong to this workspace will also be deleted."
 msgstr "¿Está seguro de que desea eliminar todo para esta organización? Esto no se puede deshacer. También se eliminarán todos los logins que solo pertenezcan a este workspace."
-
-msgid "Connected to your <b>DT One</b> account."
-msgstr ""
-
-msgid "Transfer Log"
-msgstr "Registro de transferencia"
-
-msgid "Connect your DT One account."
-msgstr ""
-
-#, python-format
-msgid "Adding a DT One account will allow you to send airtime credit over 400+ operators in over 100 countries. Once connected you can transfer airtime credit within your flows. To signup for an account, visit %(link)s."
-msgstr ""
-
-#, python-format
-msgid "You can find your credentials on the Developer tab on your %(link)s page."
-msgstr ""
-
-msgid "Your account is connected to a DT One account."
-msgstr ""
-
-#, python-format
-msgid "If you no longer want it connected, you can <a href=\"%(disconnect_url)s\">disconnect</a> it. Doing so will cause the payment actions in your flows to no longer be processed."
-msgstr ""
-
-msgid "Disconnect DT One"
-msgstr "Desconecte DT One"
-
-msgid "This will disconnect your DT One account. Payment actions will no longer be processed. Are you sure you want to proceed?"
-msgstr "Esto desconectará su cuenta de DT One. Las acciones de pago ya no se procesarán. ¿Estas seguro que deseas continuar?"
 
 #, python-format
 msgid "Your workspace is <b>%(org)s</b>"
@@ -7805,6 +7817,9 @@ msgstr "Ingrese una consulta"
 #, python-brace-format
 msgid "Found ${count} for ${query}"
 msgstr "Se encontró $ {count} por $ {query}"
+
+#~ msgid "Missing data: Agent Name or API Key.Please check them again and retry."
+#~ msgstr "Datos faltantes: nombre del agente o clave de API. Vuelva a verificarlos y vuelva a intentarlo."
 
 #~ msgid "Disconnect Nexmo"
 #~ msgstr "Desconectar Nexmo"
